--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "react-bootstrap": "^2.10.0",
     "react-router-dom": "^6.21.3",
     "react-slick": "^0.30.1"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
